[package]
name = "rigid_body_2d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3.25"
itertools = "0.10.5"
rand = "0.8.5"
rayon = "1.7.0"
num_cpus = "1.15.0"

[profile.release]
opt-level = 3